Orthographic Viewpoints Hidden Grid #61701

Closed
opened 2019-02-19 09:24:46 +01:00 by Min · 6 comments

System Information
Operating system: Windows 7 Ultimate 64 bit
Graphics card: EVGA GeForce GTX 780 SC ACX

Blender Version
Broken: 2.80, 0b6dbbc306, 2019-02-10 00:16 to 790cb7799d, 2019-02-19 00:38
Worked: Recent 2.80 builds around 8c89790674, 2019-01-31 01:07

Short description of error
In previous builds, I could disable the grid and all three axes in the overlays menu in order to hide them in the user orthographic view. The grid would still appear in the top, left, right, etc. orthographic viewpoints when I click the interactive gizmo axes or use the rotate view navigation shortcut with axis snapping. In recent builds, the grid is now hidden in these viewpoints and the only way to make them visible is by enabling the grid or at least one axis in the overlays menu.

I've tried File > Restore factory settings, but the bug persists in both builds I've mentioned. Unsure if this is a bug or a feature removal/update. Attached is my startup.blend file after restoring factory settings. I'm certain this worked in 8c89790674, 2019-01-31 01:07 and before, but it doesn't work now even in that old build. Perhaps an update to the userpref.blend file by a recent build caused it to stop working? startup.blend

Exact steps for others to reproduce the error
In the overlays menu > guides, disable the grid and all three axes. The grid is hidden in the user orthographic view and also (undesirably) in every orthographic viewpoint.

**System Information** Operating system: Windows 7 Ultimate 64 bit Graphics card: EVGA GeForce GTX 780 SC ACX **Blender Version** Broken: 2.80, 0b6dbbc306b0, 2019-02-10 00:16 to 790cb7799dcf, 2019-02-19 00:38 Worked: Recent 2.80 builds around 8c8979067490, 2019-01-31 01:07 **Short description of error** In previous builds, I could disable the grid and all three axes in the overlays menu in order to hide them in the user orthographic view. The grid would still appear in the top, left, right, etc. orthographic viewpoints when I click the interactive gizmo axes or use the rotate view navigation shortcut with axis snapping. In recent builds, the grid is now hidden in these viewpoints and the only way to make them visible is by enabling the grid or at least one axis in the overlays menu. I've tried File > Restore factory settings, but the bug persists in both builds I've mentioned. Unsure if this is a bug or a feature removal/update. Attached is my startup.blend file after restoring factory settings. I'm certain this worked in 8c8979067490, 2019-01-31 01:07 and before, but it doesn't work now even in that old build. Perhaps an update to the userpref.blend file by a recent build caused it to stop working? [startup.blend](https://archive.blender.org/developer/F6656973/startup.blend) **Exact steps for others to reproduce the error** In the overlays menu > guides, disable the grid and all three axes. The grid is hidden in the user orthographic view and also (undesirably) in every orthographic viewpoint.

#61960 was marked as duplicate of this issue

#61960 was marked as duplicate of this issue
Author

Added subscriber: @Nominous

Added subscriber: @Nominous
Sebastian Parborg self-assigned this 2019-02-19 11:14:43 +01:00

I've uploaded a fix to D4378

I've uploaded a fix to [D4378](https://archive.blender.org/developer/D4378)

This issue was referenced by 2be29999bd

This issue was referenced by 2be29999bd4174b99afc634bb3262decccd5278d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @taholmes160, @Russ1642, @LazyDodo

Added subscribers: @taholmes160, @Russ1642, @LazyDodo
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#61701
No description provided.